test/bad/tuples/tuple03.px

t = (false, true)
t.a = true
